<resources>
    <string name="app_name">Footbal League</string>
    <string name="gambar">gambar</string>
    <string name="country">Country</string>
    <string name="established">Established</string>
    <string name="alternate_names">Alternate Names</string>
    <string name="match_schedules">Match Schedules</string>
    <string name="goals">Goals</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="logo_home_team">Logo Home Team</string>
    <string name="vs">:</string>
    <string name="logo_away_team">Logo Away Team</string>
    <string name="position">#</string>
    <string name="team">Team</string>
    <string name="pts">Pts</string>
    <string name="gf_ga">GF-GA</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="p">P</string>
</resources>