<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/backgroundCard"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_position" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_team" android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/txt_position"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/txt_position"/>
        <TextView
                android:text="@string/pts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_pts" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/gf_ga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_gfga" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/txt_pts"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/txt_pts"/>
        <TextView
                android:text="@string/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_draw" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/txt_gfga"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/txt_gfga"/>
        <TextView
                android:text="@string/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_win" app:layout_constraintEnd_toStartOf="@+id/txt_draw"
                android:layout_marginEnd="16dp" android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/txt_draw"/>
        <TextView
                android:text="@string/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_played" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/txt_win"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/txt_win"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>