<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_main"
        tools:context=".ui.standings.StandingsActivity">

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    <include
            layout="@layout/custom_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/textView"/>
        <TextView
                android:text="@string/pts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/gf_ga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/textView3"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/textView3"/>
        <TextView
                android:text="@string/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/textView4"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/textView4"/>
        <TextView
                android:text="@string/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" app:layout_constraintEnd_toStartOf="@+id/textView5"
                android:layout_marginEnd="16dp" android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/textView5"/>
        <TextView
                android:text="@string/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" android:textStyle="bold" app:layout_constraintEnd_toStartOf="@+id/textView6"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/textView6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_standings"
            android:layout_below="@+id/layout_header"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</RelativeLayout>