<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/layout_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail_match.DetailMatchActivity">

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    <include
            layout="@layout/custom_toolbar" />

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/txt_date"
                    style="@style/TextAppearance.AppCompat.txtsubtitlebottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="30 November 2019" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/txt_time"
                    style="@style/TextAppearance.AppCompat.txtsubtitlebottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="18:30" app:layout_constraintTop_toBottomOf="@+id/txt_date"
                    app:layout_constraintEnd_toEndOf="@+id/txt_date" app:layout_constraintStart_toStartOf="@+id/txt_date"/>

            <ImageView
                    android:id="@+id/logo_home"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/logo_home_team"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time"
                    app:layout_constraintEnd_toStartOf="@+id/score_home" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

            <TextView
                    android:id="@+id/txt_vs"
                    style="@style/TextAppearance.AppCompat.score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txt_time"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/score_home"
                    style="@style/TextAppearance.AppCompat.score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1" android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/txt_vs"
                    app:layout_constraintTop_toTopOf="@+id/txt_vs"
            />

            <ImageView
                    android:id="@+id/logo_away"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/logo_away_team"
                    android:src="@color/colorPrimary" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_time"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/score_away"
                    android:layout_marginStart="8dp"/>

            <TextView
                    android:id="@+id/score_away"
                    style="@style/TextAppearance.AppCompat.score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    app:layout_constraintTop_toTopOf="@+id/txt_vs"
                    app:layout_constraintStart_toEndOf="@+id/txt_vs"
                    android:layout_marginStart="32dp"/>

            <TextView
                    android:id="@+id/name_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Chealsea" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/logo_home"
                    app:layout_constraintEnd_toEndOf="@+id/logo_home"
                    app:layout_constraintStart_toStartOf="@+id/logo_home"
            />

            <TextView
                    android:id="@+id/name_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Arsenal" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/logo_away"
                    app:layout_constraintEnd_toEndOf="@+id/logo_away"
                    app:layout_constraintStart_toStartOf="@+id/logo_away"
            />

            <LinearLayout
                    android:id="@+id/goal_layout"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/name_home"
                    android:layout_marginTop="24dp">

                <TextView
                        android:id="@+id/goal_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        tools:text="52':Mateo Kovacic"/>
                <TextView
                        android:id="@+id/goal_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/goals"/>
                <TextView
                        android:id="@+id/goal_away"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="middle"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="50':Alexandre Lacazette"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/redcard_layout"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/goal_layout"
                    android:layout_marginTop="8dp">

                <TextView
                        android:id="@+id/redcard_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        tools:text="52':Mateo Kovacic"/>
                <TextView
                        android:id="@+id/redcard_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/red_card"/>
                <TextView
                        android:id="@+id/redcard_away"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="middle"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="50':Alexandre Lacazette"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/yellowcard_layout"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/redcard_layout"
                    android:layout_marginTop="8dp">

                <TextView
                        android:id="@+id/yellowcard_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        tools:text="52':Mateo Kovacic"/>
                <TextView
                        android:id="@+id/yellowcard_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/yellow_card"/>
                <TextView
                        android:id="@+id/yellowcard_away"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="middle"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="50':Alexandre Lacazette"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>